--- a/.github/workflows/multiarch.yaml
+++ b/.github/workflows/multiarch.yaml
@@ -31,7 +31,6 @@ jobs:
          get_image_arch() {
              local image="$1"
              image_ref=$(echo $image | sed 's/:.*//' )
-             echo "$image_ref"
              if ( [ "$image_ref" == "inception" ] || [ "$image_ref" == "postgres" ] || [ "$image_ref" == "postgres_exporter" ] || [ "$image_ref" == "workflow-controller" ]); then
                    return
             fi
@@ -45,6 +44,8 @@ jobs:
             
              if !(echo "$arch" | grep -q "amd64" && (echo "$arch" | grep -q "arm64" || echo "$arch" | grep -q "arm")); then
                  echo " $image Image does not support multiarchitecture"
+             else
+                 echo "$image supports architecture : $arch"
              fi
                            }
          while read -r line; do
