--- a/.github/workflows/multiarch.yaml
+++ b/.github/workflows/multiarch.yaml
@@ -28,35 +28,57 @@ jobs:
          yq '.' charts/devtron/values.yaml > values.json  
          
         
+    - name: Check Multi-Arch Images
+      env:
+         GITHUB_TOKEN: ${{ github.token }}
+         PRNUM: ${{ github.event.pull_request.number }}
+      run: |
+         yq '.' charts/devtron/values.yaml > values.json
          get_image_arch() {
              local image="$1"
-             image_ref=$(echo $image | sed 's/:.*//' )
-             if ( [ "$image_ref" == "inception" ] || [ "$image_ref" == "postgres" ] || [ "$image_ref" == "postgres_exporter" ] || [ "$image_ref" == "workflow-controller" ]); then
-                   return
-            fi
-            
-             local arch=$(docker manifest inspect "quay.io/devtron/$image" | jq -r '.manifests[].platform.architecture' | sort | uniq)
-             
-             if [ $? -ne 0 ]; then
-                error_images+=("$image")
-                return
-            fi 
-            
-             if !(echo "$arch" | grep -q "amd64" && (echo "$arch" | grep -q "arm64" || echo "$arch" | grep -q "arm")); then
-                 echo " $image Image does not support multiarchitecture"
-             else
-                 echo "$image supports multi-architecture : $arch"
-             fi
-                           }
-         while read -r line; do
-          image=$(echo "$line" | cut -d'"' -f4)
-          if [ -n "$image" ]; then
-             echo "$image"
-             if [ -n "$tag" ]; then
-                image_ref="$image:$tag"
-              else
-                image_ref="$image"
+              image_ref=$(echo $image | sed 's/:.*//')
+              if ( [ "$image_ref" == "inception" ] || [ "$image_ref" == "postgres" ] || [ "$image_ref" == "postgres_exporter" ] || [ "$image_ref" == "workflow-controller" ]); then
+                 return
               fi
-             get_image_arch "$image_ref"
-          fi
-         done < <(grep -Eo '"image":\s*"[^"]*"' values.json)
+              
+                local arch=$(docker manifest inspect "quay.io/devtron/$image" | jq -r '.manifests[].platform.architecture' | sort | uniq)
+                
+              if [ $? -ne 0 ]; then
+                 error_images+=("$image")
+                 return
+              fi
+              
+              if !(echo "$arch" | grep -q "amd64" && (echo "$arch" | grep -q "arm64" || echo "$arch" | grep -q "arm")); then
+                   echo " $image Image does not support multiarchitecture"
+                   non_multiarch_images+=("$image")
+             else
+                  echo "$image supports multi-architecture : $arch"
+             fi
+            }
+            
+            while read -r line; do
+              image=$(echo "$line" | cut -d'"' -f4)
+            if [ -n "$image" ]; then
+                echo "$image"
+                if [ -n "$tag" ]; then
+                    image_ref="$image:$tag"
+                else
+                    image_ref="$image"
+                fi
+                get_image_arch "$image_ref"
+             fi
+            done < <(grep -Eo '"image":\s*"[^"]*"' values.json)
+
+          if [ ${#non_multiarch_images[@]} -ne 0 ]; then
+              echo "The following images do not support multi-architecture:"
+              printf '%s\n' "${non_multiarch_images[@]}"
+              gh pr edit $PRNUM --add-label "PR:Issue-verification-failed"
+              gh pr edit $PRNUM --remove-label "PR:Ready-to-Review"
+              exit 1
+          else
+             echo "All images support multi-architecture."
+             echo "PR:Ready-to-Review, exiting gracefully"
+             gh pr edit $PRNUM --remove-label "PR:Issue-verification-failed"
+             gh pr edit $PRNUM --add-label "PR:Ready-to-Review"
+             exit 0
+         fi
